Added SpecificCaseTest for 2v2